[gd_scene load_steps=4 format=3 uid="uid://7ee1tgjv82dy"]

[ext_resource type="FontFile" uid="uid://dd66u22iv8sfj" path="res://art/MotleyForcesRegular-w1rZ3.ttf" id="1"]
[ext_resource type="Script" path="res://leaderBoard.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://codnqfuss3c5w" path="res://art/Leader_board.png" id="3"]

[node name="leaderBoard" type="Node"]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(400, 300)
scale = Vector2(0.416, 0.556)
texture = ExtResource("3")

[node name="firstName" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 72.0
offset_top = 102.0
offset_right = 192.0
offset_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 28
text = "1. Elisha"
scroll_active = false

[node name="firstScore" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 218.0
offset_top = 102.0
offset_right = 309.0
offset_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 28
text = "150000"
scroll_active = false

[node name="secondName" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 73.0
offset_top = 200.0
offset_right = 206.0
offset_bottom = 237.0
rotation = 0.064805
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 28
text = "2. hello0"
scroll_active = false

[node name="secondScore" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 216.0
offset_top = 212.0
offset_right = 326.0
offset_bottom = 240.0
rotation = 0.0566742
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 28
text = "645000"
scroll_active = false

[node name="thirdName" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 72.0
offset_top = 328.0
offset_right = 202.0
offset_bottom = 363.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 28
text = "3. helloo"
scroll_active = false

[node name="thirdScore" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 216.0
offset_top = 328.0
offset_right = 341.0
offset_bottom = 357.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 28
text = "150000"
scroll_active = false

[node name="fourthName" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 69.0
offset_top = 449.0
offset_right = 206.0
offset_bottom = 476.0
rotation = -0.195773
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 28
text = "4. helloo"
scroll_active = false

[node name="fourthScore" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 215.0
offset_top = 420.0
offset_right = 339.0
offset_bottom = 445.0
rotation = -0.203356
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 28
text = "150000"
scroll_active = false

[node name="fifthName" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 72.0
offset_top = 538.0
offset_right = 212.0
offset_bottom = 571.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 28
text = "5. hhello"
scroll_active = false

[node name="fifthScore" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 215.0
offset_top = 538.0
offset_right = 551.0
offset_bottom = 613.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 28
text = "156251"
scroll_active = false

[node name="leaderBoardText" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 477.0
offset_top = 215.0
offset_right = 979.0
offset_bottom = 316.0
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0.207843, 0.133333, 0.0313726, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 32
text = "LeaderBoard"

[node name="pressStart" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 399.0
offset_top = 283.0
offset_right = 1006.0
offset_bottom = 389.0
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0.207843, 0.133333, 0.0313726, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 34
text = "Press \"Blue\" to return 
			to main menu"
scroll_active = false

[node name="Title" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 454.0
offset_top = 89.0
offset_right = 689.0
offset_bottom = 204.0
theme_override_colors/default_color = Color(0.309804, 0.568627, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0.207843, 0.133333, 0.0313726, 1)
theme_override_constants/outline_size = 35
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 58
text = "  Calico
  Combo"
